# kaleidoscope

./: .gitignore  Cargo.toml  Makefile  README.md
common/: Cargo.toml
common/src/: directory_tree.rs  env.rs  format_type.rs  ipc.rs  lib.rs  media_query.rs  runner_config.rs  scan_config.rs  types.rs
common/src/media_processors/: exif.rs  mod.rs
common/src/media_processors/format/: audio.rs  heif.rs  mod.rs  pdf.rs  raw.rs  standard.rs  video.rs
common/src/media_query/: macros.rs  media_query.rs  mod.rs
common/src/models/: album.rs  custom_metadata.rs  custom_task_media.rs  kv.rs  media.rs  media_extra.rs  media_tag.rs  media_view.rs  mod.rs  queue.rs  sqlize.rs  timeline.rs
common/src/remote_models/: job.rs
common/tests/: dsl.rs
custom_task/: Cargo.toml
custom_task/src/: lib.rs  main.rs
daemon/: Cargo.toml
daemon/src/: main.rs
db/: sqlx.sh
db/migrations/: 20220528030155_initial.down.sql  20220528030155_initial.up.sql  20241028053335_file_tree.down.sql  20241028053335_file_tree.up.sql  20250117170601_metadata.down.sql  20250117170601_metadata.up.sql  20250218142105_background_tasks.down.sql  20250218142105_background_tasks.up.sql  20250318153713_background_thumbnail.down.sql  20250318153713_background_thumbnail.up.sql  20250321222058_media_type.down.sql  20250321222058_media_type.up.sql  20250411213557_whisper.down.sql  20250411213557_whisper.up.sql  20250416205745_vision_ocr.down.sql  20250416205745_vision_ocr.up.sql  20250422213546_tags.down.sql  20250422213546_tags.up.sql  20250424225053_custom_task.down.sql  20250424225053_custom_task.up.sql  20250427162914_custom_task_autorun.down.sql  20250427162914_custom_task_autorun.up.sql  20250503192811_custom_tag_marker.down.sql  20250503192811_custom_tag_marker.up.sql
export/: Cargo.toml
export/src/: main.rs
frontend/: next.config.mjs  package-lock.json  package.json
frontend/src/api/: api.ts
frontend/src/components/: AlbumSelector.module.css  AlbumSelector.tsx  FileViewer.module.css  FileViewer.tsx  FilterPanel.module.css  FilterPanel.tsx  Gallery.module.css  Gallery.tsx  GalleryStateSelector.module.css  GalleryStateSelector.tsx  MapViewer.module.css  MapViewer.tsx  MediaDisplay.tsx  MediaImg.tsx  MetadataTable.module.css  MetadataTable.tsx  Preview.module.css  Preview.tsx  Progress.module.css  Progress.tsx  TagSelector.module.css  TagSelector.tsx  Thumbnail.module.css  Thumbnail.tsx  Timeline.module.css  Timeline.tsx  Transcript.module.css  Transcript.tsx
frontend/src/components/Map/: DynamicMap.module.css  DynamicMap.tsx  Map.tsx
frontend/src/hooks/: useMediaSelector.ts  useQueryState.ts
frontend/src/pages/: _app.tsx  globals.css  index.module.css  index.tsx
frontend/src/utility/: Filter.ts  mediaMetadata.ts
objc/: ocr.h  ocr.m
python/: custom_task.py  fw-transcribe.py  requirements.txt  vllm.py
remote_runner/: Cargo.toml  sqlx.sh
remote_runner/migrations/: 20250419162838_init.down.sql  20250419162838_init.up.sql
remote_runner/src/: lib.rs  main.rs
scan/: Cargo.toml
scan/src/: add_or_update_media.rs  exif.rs  main.rs  media_operations.rs
scan/src/format/: heif.rs  mod.rs  raw.rs  standard.rs  video.rs
scripts/: requirements.txt  sha1_to_blake3.py  thumbnail-subdir.py
server/: Cargo.toml
server/src/: config.rs  ipc.rs  main.rs  stream.rs
server/src/migrations/: mod.rs
tasks/: Cargo.toml  build.rs
tasks/src/: custom_task.rs  lib.rs  main.rs  ops.rs  queue.rs  run_python.rs  runner.rs
tasks/src/models/: queue.rs
tasks/src/remote_utils/: job_util.rs  mod.rs  multipart_helper.rs  remote_requester.rs
tasks/src/tasks/: any_task.rs  hello_world.rs  mod.rs  remote.rs  task.rs  thumbnail.rs  vllm.rs  whisper.rs
tasks/src/tasks/ocr/: ffi.rs  mod.rs
