[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "migrate", "uuid", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
serde_json = "1.0"
polonius-the-crab = "0.4.2"
thiserror = "1.0.60"
strum = { version = "0.27" , features = ["derive"]}
log = "0.4.22"
env_logger = "0.11.5"


libheif-rs = "1.1"
ffmpeg-next = "7.1"
rawloader = "0.37.1"
imagepipe = "0.5.0"
image = "0.25.2"
kamadak-exif = "0.6.1"
nom-exif = "2.5.1"
iso6709parse = "0.1.0"
pdfium-render = { version = "0.8", features = ["thread_safe", "sync"] }
once_cell = "1.20.2"