[package]
name = "custom_task"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tasks = { path = "../tasks" }
serde_json = "1.0"
serde = { version = "1.0.201", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "migrate", "uuid", "chrono"] }