[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
nix = { version = "0.29", features = ["user"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "migrate", "uuid", "chrono"] }
tokio-util = { version = "0.7", features = ["io"] }