[package]
name = "kaleidoscope-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tasks = { path = "../tasks" }
nix = { version = "0.29", features = ["user"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "migrate", "uuid", "chrono"] }
once_cell = "1.20"
serde = { version = "1.0.201", features = ["derive"] }
