[package]
name = "export"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tasks = { path = "../tasks" }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "migrate", "uuid", "chrono"] }
tokio = { version = "1.37", features = ["full"] }
log = "0.4.22"
env_logger = "0.11.5"
serde_json = "1.0.117"
clap = { version = "4.5.23", features = ["derive"] }
walkdir = "2.5.0"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"