[package]
name = "remote_runner"
description = "A remote task runner"
version = "0.1.0"
edition = "2021"

[dependencies]
tasks = { path = "../tasks" }
common = { path = "../common" }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "migrate", "uuid", "chrono"] }
tokio = { version = "1.37", features = ["full"] }
serde = "1.0"
axum = { version = "0.8", features = [] }
once_cell = "1.20"
toml = "0.8"
thiserror = "1.0"
serde_json = "1.0"
anyhow = "1.0"
