[package]
name = "scan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
serde = "1.0"
walkdir = "2.5"
tokio = { version = "1.37", features = ["full"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "migrate", "uuid", "chrono"] }
thiserror = "1.0"
libheif-rs = "1.0"
ffmpeg-next = "7.0"
rawloader = "0.37.1"
imagepipe = "0.5.0"
sha1 = "0.10.6"
image = "0.25.2"
log = "0.4.22"
env_logger = "0.11.5"
