[package]
name = "kaleidoscope"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tasks = { path = "../tasks" }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "migrate", "uuid", "chrono"] }
tokio = { version = "1.37", features = ["full"] }
serde = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
axum = { version = "0.8", features = [] }
tower = { version = "0.4"}
tower-http = { version = "0.5", features = ["cors"] }
axum-sqlite = "0.1.0"
config = "0.14.0"
once_cell = "1.20"
chrono = "0.4.38"
common = { path = "../common" }
tokio-util = { version = "0.7", features = ["io"] }
serde_json = "1.0.117"
nix = { version = "0.29", features = ["user"] }
axum-extra = { version = "0.10" , features = ["typed-header"] }
axum-range = "0.5"
