[package]
name = "tasks"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "migrate", "uuid", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"

clap = { version = "4.5.23", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
